@startuml
left to right direction
hide methods
skinparam classAttributeIconSize 0
skinparam linetype ortho

title Mart Layer Overview

entity "mart.sales_daily" as sales_daily {
  * sales_date : DATE
  --
  orders_count : BIGINT
  customers_count : BIGINT
  gross_revenue : NUMERIC
  avg_order_value : NUMERIC
}

entity "mart.behavior_metrics" as behavior_metrics {
  * user_id : BIGINT
  --
  event_count : BIGINT
  session_count : BIGINT
  days_since_last_event : INTEGER
}

entity "mart.customer_360" as customer_360 {
  * user_id : BIGINT
  --
  orders_count : BIGINT
  total_revenue : NUMERIC
  avg_order_value : NUMERIC
  days_since_last_order : INTEGER
}

entity "mart.abc_xyz" as abc_xyz {
  * user_id : BIGINT
  --
  abc_category : TEXT
  xyz_sales_category : TEXT
  xyz_orders_category : TEXT
  total_revenue : NUMERIC
  recommended_strategy : TEXT
}

entity "mart.rfm" as rfm {
  * user_id : BIGINT
  --
  recency_days : INTEGER
  frequency_orders : BIGINT
  monetary_value : NUMERIC
  rfm_segment : TEXT
}

entity "mart.logistics_metrics" as logistics_metrics {
  * user_id : BIGINT
  --
  avg_delivery_days : NUMERIC
  return_rate : NUMERIC
  problem_score : NUMERIC
  recommendation : TEXT
}

entity "mart.cohorts" as cohorts {
  * cohort_month : DATE
  * cohort_period_number : INTEGER
  --
  cohort_size : BIGINT
  active_customers : BIGINT
  retention_rate : NUMERIC
  revenue : NUMERIC
}

entity "mart.product_xyz" as product_xyz {
  * product_id : BIGINT
  --
  product_name : TEXT
  category : TEXT
  total_revenue : NUMERIC
  cv_sales : NUMERIC
  xyz_category : TEXT
}

entity "mart.region_abc" as region_abc {
  * state : TEXT
  --
  total_revenue : NUMERIC
  total_profit : NUMERIC
  customers_count : BIGINT
  region_category : TEXT
}

entity "mart.customer_abc_monthly" as customer_abc_monthly {
  * year_month : DATE
  --
  a_customers : BIGINT
  b_customers : BIGINT
  c_customers : BIGINT
  total_customers : BIGINT
}

entity "mart.customer_category_migration" as customer_category_migration {
  * first_category : TEXT
  * last_category : TEXT
  --
  customers_count : BIGINT
  migration_percent : NUMERIC
  category_stability_percent : NUMERIC
}

entity "mart.category_abc" as category_abc {
  * category : TEXT
  --
  total_revenue : NUMERIC
  total_profit : NUMERIC
  return_rate : NUMERIC
  abc_category : TEXT
}

entity "mart.brand_abc" as brand_abc {
  * brand : TEXT
  --
  total_revenue : NUMERIC
  total_profit : NUMERIC
  return_rate : NUMERIC
  abc_category : TEXT
}

behavior_metrics -- customer_360
abc_xyz -- customer_360
rfm -- customer_360
logistics_metrics -- customer_360
product_xyz -- category_abc
brand_abc -- category_abc
customer_abc_monthly -- customer_category_migration

note top of sales_daily
  Текущий mart-слой состоит из
  13 аналитических витрин.
end note

@enduml
